# autohistorian

./: .gitignore  README.md  main.py  pyproject.toml
src/autohistorian/: __init__.py  cli.py  config.py
src/autohistorian/extract/: __init__.py  entity_extractor.py  event_extractor.py  pipeline.py  statement_extractor.py  topic_extractor.py
src/autohistorian/ingest/: __init__.py  nyt_client.py  schemas.py
src/autohistorian/knowledge/: __init__.py  models.py  store.py
src/autohistorian/llm/: __init__.py  client.py  prompts.py
src/autohistorian/resolve/: __init__.py
src/autohistorian/synthesize/: __init__.py  writer.py
tests/: __init__.py
