[project]
name = "autohistorian"
version = "0.1.0"
description = "Synthesize Wikipedia-style articles from news sources with dual timelines"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "google-genai>=0.1.0",
]

[project.scripts]
autohistorian = "autohistorian.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autohistorian"]
